// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Video Overlay End 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-overlay-container"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 16,
          "width": "100%",
        }
      }
      testID="video-overlay-end-replay"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={40}
        bbWidth={40}
        color={4294967295}
        focusable={false}
        height={40}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 40,
              "width": 40,
            },
          ]
        }
        tintColor={4294967295}
        vbHeight={24}
        vbWidth={24}
        width={40}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGGroup
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M18.968 13a6.945 6.945 0 01-1.369 3.554l1.427 1.427a8.944 8.944 0 001.942-4.98h-2zM13 19.29v2.02a8.928 8.928 0 004.611-1.917l-1.426-1.424A6.964 6.964 0 0113 19.29zM20.888 11a8.986 8.986 0 00-2.138-4.584l-1.5 1.324A6.981 6.981 0 0118.86 11h2.028zM7.473 4.603C4.803 6.167 3 9.059 3 12.37c0 4.624 3.507 8.441 8 8.941v-2.02c-3.387-.488-6-3.401-6-6.92 0-2.745 1.592-5.12 3.898-6.266L12 9.37V2H5l2.473 2.603z"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video Overlay Error 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-overlay-container"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 16,
          "width": "100%",
        }
      }
      testID="video-overlay-error-replay"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={40}
        bbWidth={40}
        color={4294967295}
        focusable={false}
        height={40}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 40,
              "width": 40,
            },
          ]
        }
        tintColor={4294967295}
        vbHeight={24}
        vbWidth={24}
        width={40}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGGroup
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M18.968 13a6.945 6.945 0 01-1.369 3.554l1.427 1.427a8.944 8.944 0 001.942-4.98h-2zM13 19.29v2.02a8.928 8.928 0 004.611-1.917l-1.426-1.424A6.964 6.964 0 0113 19.29zM20.888 11a8.986 8.986 0 00-2.138-4.584l-1.5 1.324A6.981 6.981 0 0118.86 11h2.028zM7.473 4.603C4.803 6.167 3 9.059 3 12.37c0 4.624 3.507 8.441 8 8.941v-2.02c-3.387-.488-6-3.401-6-6.92 0-2.745 1.592-5.12 3.898-6.266L12 9.37V2H5l2.473 2.603z"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "textAlign": "center",
          }
        }
      >
        An error occurred while loading the video, please try again.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video Overlay Extralife 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-overlay-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://www.cerema.fr/sites/default/files/styles/uas_normal/public/media/images/2017/11/mountain-village-2657307_1920.jpg?h=d6fbcf4a&itok=JMWt0SsS",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-overlay-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-overlay-preview-extralife"
      >
        <View
          testID="video-overlay-preview-extralife-icon"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "left": -8,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={45}
              bbWidth={45}
              color={4294967295}
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "height": 45,
                    "width": 45,
                  },
                  Object {
                    "flex": 0,
                    "height": 45,
                    "width": 45,
                  },
                ]
              }
              tintColor={4294967295}
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup>
                <RNSVGPath
                  d="M0 0h24v24H0z"
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 30,
                  "height": 59,
                  "justifyContent": "center",
                  "marginLeft": -10,
                  "width": 59,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {},
                    Object {
                      "color": "#546E7A",
                      "fontSize": 22,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                +
                1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginLeft": 7,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={38}
                bbWidth={38}
                color={4294967295}
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 28,
                        "position": "absolute",
                        "width": 28,
                      },
                      Object {
                        "height": 38,
                        "width": 38,
                      },
                    ],
                    Object {
                      "flex": 0,
                      "height": 38,
                      "width": 38,
                    },
                  ]
                }
                tintColor={4294967295}
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 .001h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4294967295}
                    strokeWidth={5}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={28}
                bbWidth={28}
                color={4294393682}
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "height": 28,
                      "position": "absolute",
                      "width": 28,
                    },
                    Object {
                      "flex": 0,
                      "height": 28,
                      "width": 28,
                    },
                  ]
                }
                tintColor={4294393682}
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 .001h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
                    fill={4294393682}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4294393682}
                    strokeWidth={5}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingTop": 24,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {},
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 15,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Bonus!
            </Text>
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 15,
                      "textAlign": "center",
                    },
                    Object {
                      "fontWeight": "700",
                    },
                  ],
                ]
              }
            >
              Get an extra life by viewing the lesson
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video Overlay FullScreen 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {},
      Object {
        "height": undefined,
      },
    ]
  }
  testID="video-overlay-fullscreen-container"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`Storyshots Video Overlay Loading 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-overlay-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://www.cerema.fr/sites/default/files/styles/uas_normal/public/media/images/2017/11/mountain-village-2657307_1920.jpg?h=d6fbcf4a&itok=JMWt0SsS",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-overlay-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-overlay-preview-video"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 36,
              "justifyContent": "center",
              "transform": Array [
                Object {
                  "scaleX": 0.5,
                },
                Object {
                  "scaleY": 0.5,
                },
                Object {
                  "rotateZ": "0deg",
                },
              ],
              "width": 36,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#F73F52",
                "borderRadius": 3,
                "height": 6,
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotateZ": "45deg",
                  },
                  Object {
                    "translateX": -15,
                  },
                ],
                "width": 18,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#3EC483",
                "borderRadius": 3,
                "height": 6,
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotateZ": "135deg",
                  },
                  Object {
                    "translateX": -15,
                  },
                ],
                "width": 18,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFE100",
                "borderRadius": 3,
                "height": 6,
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotateZ": "225deg",
                  },
                  Object {
                    "translateX": -15,
                  },
                ],
                "width": 18,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#00B0FF",
                "borderRadius": 3,
                "height": 6,
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotateZ": "315deg",
                  },
                  Object {
                    "translateX": -15,
                  },
                ],
                "width": 18,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video Overlay Play 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-overlay-container"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`Storyshots Video Overlay Preview 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="overlay-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://www.cerema.fr/sites/default/files/styles/uas_normal/public/media/images/2017/11/mountain-village-2657307_1920.jpg?h=d6fbcf4a&itok=JMWt0SsS",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="overlay-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="overlay-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color={4294967295}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor={4294967295}
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
